--- a/Chart.yaml
+++ b/Chart.yaml
@@ -9,3 +9,9 @@ type: application
 version: 1.0.0
 
 appVersion: "latest"
+
+dependencies:
+- name: postgresql
+  version: ~13.2.10
+  repository: https://charts.bitnami.com/bitnami
+  condition: postgres.enabled
